basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__code_blocks.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓬𝓸𝓭𝓮_𝓫𝓵𝓸𝓬𝓴𝓼                                                                  │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Code blocks                                                                  │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ To format code as a block, enclose it with three backticks or three tildes.  │"
"│                                                                              │"
"│                                                                              │"
"│  cd ~/Desktop                                                                │"
"│                                                                              │"
"│                                                                              │"
"│ You can also create a code block by indenting the text using Tab or 4 blank  │"
"│ ⤷ spaces.                                                                    │"
"│                                                                              │"
"│                                                                              │"
"│  cd ~/Desktop                                                                │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
