basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__code_syntax_highlighting_in_blocks.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓬𝓸𝓭𝓮_𝓼𝔂𝓷𝓽𝓪𝔁_𝓱𝓲𝓰𝓱𝓵𝓲𝓰𝓱𝓽𝓲𝓷𝓰_𝓲𝓷_𝓫𝓵𝓸𝓬𝓴𝓼                                           │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Code syntax highlighting in blocks                                           │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ You can add syntax highlighting to a code block, by adding a language code   │"
"│ ⤷ after the first set of backticks.                                          │"
"│                                                                              │"
"│                                                                              │"
"│  function fancyAlert(arg) {                                                  │"
"│    if(arg) {                                                                 │"
"│      $.facebox({div:'#foo'})                                                 │"
"│    }                                                                         │"
"│  }                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
