basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_list_line_by_line_raw.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 Shopping                                                                  │"
"│    ───────────────────────────────────────────────────────────────────────── │"
"│  2                                                                           │"
"│  3 ● apples                                                                  │"
"│  4 - bananas                                                                 │"
"│  5 ● cherries                                                                │"
"│  6                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
