basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_no_empty_line_between_adjacent_blocks.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 ## Heading                                                                │"
"│    ───────────────────────────────────────────────────────────────────────── │"
"│  2 Paragraph immediately under heading.                                      │"
"│  3 ● first item                                                              │"
"│  4 ● second item                                                             │"
"│  5                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
