basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_preserves_loose_list_empty_lines.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 ## Lists with line breaks                                                 │"
"│    ───────────────────────────────────────────────────────────────────────── │"
"│  2                                                                           │"
"│  3 1. First list item                                                        │"
"│  4                                                                           │"
"│  5 2. Second list item                                                       │"
"│  6 3. Third list item                                                        │"
"│  7                                                                           │"
"│  8 4. Fourth list item                                                       │"
"│  9                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
