basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_table_cursor_delimiter.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 Tables                                                                    │"
"│    ───────────────────────────────────────────────────────────────────────── │"
"│                                                                              │"
"│  2 ┌───────┬────────────┐                                                    │"
"│  3 │ Name  │    Role    │                                                    │"
"│  4 | :---- | :--------: |                                                    │"
"│  5 │ Alice │ Maintainer │                                                    │"
"│    ├───────┼────────────┤                                                    │"
"│  6 │ Bob   │  Reviewer  │                                                    │"
"│    └───────┴────────────┘                                                    │"
"│  7                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
