basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__edit_mode_task_list_then_multiple_empty_lines.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│    𝓣𝓮𝓼𝓽                                                                      │"
"│    ═════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│  1 ## Tasks                                                                  │"
"│    ───────────────────────────────────────────────────────────────────────── │"
"│  2 □ one                                                                     │"
"│  3 □ two                                                                     │"
"│  4                                                                           │"
"│  5                                                                           │"
"│  6                                                                           │"
"│  7 next paragraph                                                            │"
"│  8                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
